# service_basic_template

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/app/: test.py
